[gd_scene load_steps=11 format=2]

[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=1]
[ext_resource path="res://Interfaces/UI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://GFX/Interface/PNG/metalPanel.png" type="Texture" id=3]
[ext_resource path="res://GFX/Interface/PNG/dotRed.png" type="Texture" id=6]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_yellowCorner.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_greenCorner.png" type="Texture" id=8]
[ext_resource path="res://Interfaces/Numpad.gd" type="Script" id=10]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
modulate_color = Color( 0.894118, 0.890196, 0.890196, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numpad" type="Popup"]
margin_right = 300.0
margin_bottom = 400.0
theme = ExtResource( 2 )
script = ExtResource( 10 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VboxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_bottom = -15.0
rect_min_size = Vector2( 300, 380 )
custom_constants/separation = 40

[node name="DisplayContainer" type="CenterContainer" parent="VboxContainer"]
margin_right = 300.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VboxContainer/DisplayContainer"]
margin_left = 25.0
margin_right = 275.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VboxContainer/DisplayContainer"]
margin_left = 110.0
margin_top = 36.0
margin_right = 190.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1

[node name="ButtonContainer" type="CenterContainer" parent="VboxContainer"]
margin_top = 140.0
margin_right = 300.0
margin_bottom = 345.0

[node name="GridContainer" type="GridContainer" parent="VboxContainer/ButtonContainer"]
margin_left = 75.0
margin_right = 225.0
margin_bottom = 205.0
mouse_filter = 0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Button1" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "1"

[node name="Button2" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_right = 95.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "2"

[node name="Button3" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "3"

[node name="Button4" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_top = 55.0
margin_right = 40.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "4"

[node name="Button5" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 55.0
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "5"

[node name="Button6" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 55.0
margin_right = 150.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "6"

[node name="Button7" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_top = 110.0
margin_right = 40.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "7"

[node name="Button8" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 110.0
margin_right = 95.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "8"

[node name="Button9" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "9"

[node name="StatusLight" type="TextureRect" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_top = 165.0
margin_right = 40.0
margin_bottom = 205.0
texture = ExtResource( 6 )
expand = true

[node name="Button10" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 165.0
margin_right = 95.0
margin_bottom = 205.0
rect_min_size = Vector2( 40, 40 )
text = "0"

[node name="ButtonOK" type="Button" parent="VboxContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 165.0
margin_right = 150.0
margin_bottom = 205.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "OK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
